# cloudrun-employee-service-handson

./: Dockerfile  README.md  create_dummy.py  locustfile.py  pyproject.toml  tutorial.md
app/: crud.py  database.py  main.py  models.py  schemas.py
