[tool.poetry]
name = "basic-googlecloud-handson"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.36"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
PyMySQL = "^1.0.2"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.961"
requests = "^2.31.0"
Faker = "^13.13.0"
locust = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
